# bs-simulator

./: .gitignore  AGENTS.md  README.md  start.sh
backend/: .env  .env.example  pyproject.toml
backend/src/backend/: app.py  config.py  domain.py  llm.py  main.py  repositories.py  schemas.py  service.py
backend/tests/: test_api.py  test_service.py
frontend/: App.tsx  package-lock.json  package.json
infra/supabase/: schema.sql
