[project]
name = "bs-simulator-backend"
version = "0.1.0"
description = "API FastAPI pour le simulateur d'entreprise IA"
authors = [
    { name = "GJV", email = "GJV@foyer.lu" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "openai>=2.9.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
backend = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
